[UPDATE] siteUrl and 1 question error.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-widthh, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="canonical" href="https://cajotafer.com/" />
+    <link rel="canonical" href="https://10xengineers.netlify.com/" />
 
     <title>Are you a 10xEngineer? | Quiz</title>
     <meta
@@ -29,7 +29,7 @@
       property="og:description"
       content="Are you a 10xEngineer? Do de quiz to discover if you really deserve to be called a 10x engineer."
     />
-    <meta property="og:url" content="http://mydomain.com/pagina" />
+    <meta property="og:url" content="https://10xengineers.netlify.com/" />
     <meta property="og:site_name" content="10xEngineer" />
     <meta property="og:image" content="https://cajotafer.com/favicon.ico" />
     <meta name="twitter:card" content="summary" />
