--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
     <meta name="theme-color" content="#15202b" />
 
     <script defer src="/bundle.js"></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
   </head>
 
   <body></body>
