--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="canonical" href="https://10xengineers.netlify.com/" />
 
-    <title>Are you a 10xEngineer? | Quiz</title>
+    <title>10xEngineer Test</title>
     <meta
       name="description"
-      content="Are you a 10xEngineer? Do de quiz to discover if you really deserve to be called a 10x engineer."
+      content="Are you a 10xEngineer? Do de test to discover if you really deserve to be called a 10x engineer."
     />
 
     <link
@@ -24,10 +24,10 @@
     <!-- OpenGraph metadata-->
     <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Are you a 10xEngineer?" />
+    <meta property="og:title" content="10xEngineer Test" />
     <meta
       property="og:description"
-      content="Are you a 10xEngineer? Do de quiz to discover if you really deserve to be called a 10x engineer."
+      content="Are you a 10xEngineer? Do de test to discover if you really deserve to be called a 10x engineer."
     />
     <meta property="og:url" content="https://10xengineers.netlify.com/" />
     <meta property="og:site_name" content="10xEngineer" />
@@ -35,9 +35,9 @@
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:description"
-      content="Are you a 10xEngineer? Do de quiz to discover if you really deserve to be called a 10x engineer."
+      content="Are you a 10xEngineer? Do de test to discover if you really deserve to be called a 10x engineer."
     />
-    <meta name="twitter:title" content="Are you a 10xEngineer?" />
+    <meta name="twitter:title" content="10xEngineer Test" />
     <meta name="twitter:site" content="@cajotafer" />
     <meta name="twitter:creator" content="@cajotafer" />
 
@@ -45,6 +45,13 @@
     <meta name="theme-color" content="#15202b" />
 
     <script defer src="/bundle.js"></script>
+    <script type="text/javascript">
+      var onloadCallback = function() {
+        grecaptcha.render("recaptcha", {
+          sitekey: "6LdGjq0UAAAAADAau-xSeyjw_uK_KszmuaqF7ZpM"
+        });
+      };
+    </script>
     <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
   </head>
 
