--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,20 @@
     <meta name="theme-color" content="#15202b" />
 
     <script defer src="/bundle.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-124677049-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-124677049-2");
+    </script>
     <script type="text/javascript">
       var onloadCallback = function() {
         grecaptcha.render("recaptcha", {
