[ADD] improved twitter and openGraph metadata. added image

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,14 @@
     />
     <meta property="og:url" content="https://10xengineers.netlify.com/" />
     <meta property="og:site_name" content="10xEngineer" />
-    <meta property="og:image" content="https://cajotafer.com/favicon.ico" />
+    <meta
+      property="og:image"
+      content="https://10xengineers.netlify.com/img/10xEgineers.png"
+    />
+    <meta name="og:image:type" content="image/png" />
+    <meta name="og:image:width" content="560" />
+    <meta name="og:image:height" content="315" />
+    <!-- TwitterCards metadata-->
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:description"
@@ -40,7 +47,10 @@
     <meta name="twitter:title" content="10xEngineer Test" />
     <meta name="twitter:site" content="@cajotafer" />
     <meta name="twitter:creator" content="@cajotafer" />
-
+    <meta
+      name="twitter:image"
+      content="https://10xengineers.netlify.com/img/10xEgineers.png"
+    />
     <meta name="msapplication-TileColor" content="#15202b" />
     <meta name="theme-color" content="#15202b" />
 
