--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,10 @@
       property="og:image"
       content="https://10xengineers.netlify.com/img/10xEgineers.png"
     />
-    <meta name="og:image:type" content="image/png" />
-    <meta name="og:image:width" content="560" />
-    <meta name="og:image:height" content="315" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="560" />
+    <meta property="og:image:height" content="315" />
+    <meta property="og:image:alt" content="10x Engineers Test promo." />
     <!-- TwitterCards metadata-->
     <meta name="twitter:card" content="summary" />
     <meta
