[FIX] image url

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <meta property="og:site_name" content="10xEngineer" />
     <meta
       property="og:image"
-      content="https://10xengineers.netlify.com/img/10xEgineers.png"
+      content="https://10xengineers.netlify.com/img/10xEngineers.png"
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="560" />
@@ -50,7 +50,7 @@
     <meta name="twitter:creator" content="@cajotafer" />
     <meta
       name="twitter:image"
-      content="https://10xengineers.netlify.com/img/10xEgineers.png"
+      content="https://10xengineers.netlify.com/img/10xEngineers.png"
     />
     <meta name="msapplication-TileColor" content="#15202b" />
     <meta name="theme-color" content="#15202b" />
