[UPDATE] - SEO improvement 10xEngineer -> 10x Engineers

--- a/public/index.html
+++ b/public/index.html
@@ -1,83 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="canonical" href="https://10xengineers.netlify.com/" />
 
-    <title>10xEngineer Test</title>
-    <meta
-      name="description"
-      content="Are you a 10xEngineer? Do de test to discover if you really deserve to be called a 10x engineer."
-    />
+<head>
+  <meta charset="utf8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="canonical" href="https://10xengineers.netlify.com/" />
 
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://cajotafer.com/favicon.ico"
-    />
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/bundle.css" />
-    <link rel="prefetch" href="https://platform.twitter.com/widgets.js" />
+  <title>10x Engineers Test</title>
+  <meta name="description"
+    content="Are you a 10x Engineer? Do de test to discover if you really deserve to be called a 10x engineer." />
 
-    <!-- OpenGraph metadata-->
-    <meta property="og:locale" content="en" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="10xEngineer Test" />
-    <meta
-      property="og:description"
-      content="Are you a 10xEngineer? Do de test to discover if you really deserve to be called a 10x engineer."
-    />
-    <meta property="og:url" content="https://10xengineers.netlify.com/" />
-    <meta property="og:site_name" content="10xEngineer" />
-    <meta
-      property="og:image"
-      content="https://10xengineers.netlify.com/img/10xEngineers.png"
-    />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="560" />
-    <meta property="og:image:height" content="315" />
-    <meta property="og:image:alt" content="10x Engineers Test promo." />
-    <!-- TwitterCards metadata-->
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:description"
-      content="Are you a 10xEngineer? Do de test to discover if you really deserve to be called a 10x engineer."
-    />
-    <meta name="twitter:title" content="10xEngineer Test" />
-    <meta name="twitter:site" content="@cajotafer" />
-    <meta name="twitter:creator" content="@cajotafer" />
-    <meta
-      name="twitter:image"
-      content="https://10xengineers.netlify.com/img/10xEngineers.png"
-    />
-    <meta name="msapplication-TileColor" content="#15202b" />
-    <meta name="theme-color" content="#15202b" />
+  <link rel="icon" type="image/x-icon" href="https://cajotafer.com/favicon.ico" />
+  <link rel="stylesheet" href="/global.css" />
+  <link rel="stylesheet" href="/bundle.css" />
+  <link rel="prefetch" href="https://platform.twitter.com/widgets.js" />
 
-    <script defer src="/bundle.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-124677049-2"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+  <!-- OpenGraph metadata-->
+  <meta property="og:locale" content="en" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="10x Engineers Test" />
+  <meta property="og:description"
+    content="Are you a 10x Engineer? Do de test to discover if you really deserve to be called a 10x engineer." />
+  <meta property="og:url" content="https://10xengineers.netlify.com/" />
+  <meta property="og:site_name" content="10x Engineers Test" />
+  <meta property="og:image" content="https://10xengineers.netlify.com/img/10xEngineers.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="560" />
+  <meta property="og:image:height" content="315" />
+  <meta property="og:image:alt" content="10x Engineers Test promo." />
+  <!-- TwitterCards metadata-->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:description"
+    content="Are you a 10x Engineer? Do de test to discover if you really deserve to be called a 10x engineer." />
+  <meta name="twitter:title" content="10x Engineers Test" />
+  <meta name="twitter:site" content="@cajotafer" />
+  <meta name="twitter:creator" content="@cajotafer" />
+  <meta name="twitter:image" content="https://10xengineers.netlify.com/img/10xEngineers.png" />
+  <meta name="msapplication-TileColor" content="#15202b" />
+  <meta name="theme-color" content="#15202b" />
 
-      gtag("config", "UA-124677049-2");
-    </script>
-    <script type="text/javascript">
-      var onloadCallback = function() {
-        grecaptcha.render("recaptcha", {
-          sitekey: "6LdGjq0UAAAAADAau-xSeyjw_uK_KszmuaqF7ZpM"
-        });
-      };
-    </script>
-  </head>
+  <script defer src="/bundle.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124677049-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  <body></body>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "UA-124677049-2");
+  </script>
+  <script type="text/javascript">
+    var onloadCallback = function () {
+      grecaptcha.render("recaptcha", {
+        sitekey: "6LdGjq0UAAAAADAau-xSeyjw_uK_KszmuaqF7ZpM"
+      });
+    };
+  </script>
+</head>
+
+<body></body>
+
 </html>
