--- a/public/es/index.html
+++ b/public/es/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="canonical" href="https://10xengineers.netlify.com" />
+    <link rel="canonical" href="https://10xengineers.netlify.com/es" />
 
     <title>10x Engineers Test</title>
     <meta
       name="description"
-      content="Are you a 10x Engineer? Do de test to discover if you really deserve to be called a 10x engineer."
+      content="¿Eres un 10x Engineer? Toma el test y descubre si mereces ser llamado un 10x engineer."
     />
 
     <link
@@ -17,19 +17,19 @@
       type="image/x-icon"
       href="https://cajotafer.com/favicon.ico"
     />
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/bundle.css" />
+    <link rel="stylesheet" href="../global.css" />
+    <link rel="stylesheet" href="../bundle.css" />
     <link rel="prefetch" href="https://platform.twitter.com/widgets.js" />
 
     <!-- OpenGraph metadata-->
-    <meta property="og:locale" content="en" />
+    <meta property="og:locale" content="es" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="10x Engineers Test" />
     <meta
       property="og:description"
-      content="Are you a 10x Engineer? Do de test to discover if you really deserve to be called a 10x engineer."
+      content="¿Eres un 10x Engineer? Toma el test y descubre si mereces ser llamado un 10x engineer."
     />
-    <meta property="og:url" content="https://10xengineers.netlify.com" />
+    <meta property="og:url" content="https://10xengineers.netlify.com/es" />
     <meta property="og:site_name" content="10x Engineers Test" />
     <meta
       property="og:image"
@@ -43,7 +43,7 @@
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:description"
-      content="Are you a 10x Engineer? Do de test to discover if you really deserve to be called a 10x engineer."
+      content="¿Eres un 10x Engineer? Toma el test y descubre si mereces ser llamado un 10x engineer."
     />
     <meta name="twitter:title" content="10x Engineers Test" />
     <meta name="twitter:site" content="@cajotafer" />
@@ -55,7 +55,7 @@
     <meta name="msapplication-TileColor" content="#15202b" />
     <meta name="theme-color" content="#15202b" />
 
-    <script defer src="/bundle.js"></script>
+    <script defer src="../bundle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
