[FIX] - /es/ SEO

--- a/public/es/index.html
+++ b/public/es/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="canonical" href="https://10xengineers.netlify.com/es" />
+    <link rel="canonical" href="https://10xengineers.netlify.com/es/" />
 
     <title>10x Engineers Test</title>
     <meta
@@ -29,7 +29,7 @@
       property="og:description"
       content="¿Eres un 10x Engineer? Toma el test y descubre si mereces ser llamado un 10x engineer."
     />
-    <meta property="og:url" content="https://10xengineers.netlify.com/es" />
+    <meta property="og:url" content="https://10xengineers.netlify.com/es/" />
     <meta property="og:site_name" content="10x Engineers Test" />
     <meta
       property="og:image"
