[ADD] link- hreflang alternate

--- a/public/es/index.html
+++ b/public/es/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="canonical" href="https://10xengineers.netlify.com/es/" />
+    <link
+      rel="alternate"
+      href="https://10xengineers.netlify.com/es/"
+      hreflang="es"
+    />
+    <link
+      rel="alternate"
+      href="https://10xengineers.netlify.com"
+      hreflang="en"
+    />
 
     <title>10x Engineers Test</title>
     <meta
